# Hexapawn

./: .gitignore  CMakeLists.txt  EVALUATION.md  README.md
.ipd/: README.md
.ipd/cmake/: CMakeLists.txt
.ipd/lib/catch/: CMakeLists.txt
src/: controller.cpp  controller.h  hexapawn.cpp  model.cpp  model.h  view.cpp  view.h
test/: model_test.cpp  view_test.cpp
